--- a/src/components/forms/auth/Login.scss
+++ b/src/components/forms/auth/Login.scss
@@ -2,10 +2,11 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    padding-top: 12rem;
+    padding-top: 10rem;
 
     &__icon {
-        height: 5rem;
-        width: 5rem;
+        height: 6rem;
+        width: 6rem;
+        margin-bottom: 1rem;
     }
 }
