--- a/src/components/calculator/Calculator.scss
+++ b/src/components/calculator/Calculator.scss
@@ -2,11 +2,21 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    padding-top: 10rem;
+    padding-top: 5rem;
+    font-size: 1.1rem;
 
     &__icon {
         height: 6rem;
         width: 6rem;
         margin-bottom: 1rem;
+    }
+}
+
+.result {
+    .bmi__result {
+        padding-top: 3rem;
+    }
+    .message {
+        padding-top: 1rem;
     }
 }
